[project]
name = "pcst_fast"
dynamic = ["version"]
description = "A fast implementation of the Goemans-Williamson scheme for the prize-collecting Steiner tree / forest problem."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ludwigschmidt"},
    {name = "alexlenail"},
]
requires-python = ">=3.9"
dependencies = ["numpy<2"]

[project.urls]
homepage = "https://github.com/fraenkel-lab/pcst_fast"

[tool.setuptools_scm]

[tool.cibuildwheel]
skip = "pp39* pp*-macosx*"
test-requires = "pytest numpy"
test-skip = "*-musllinux_* *-manylinux_i686 pp39-manylinux_x86_64 pp*-win_amd64 pp*-macosx_x86_64 cp313-win*"
test-command = "pytest {project}/src"
build-verbosity = 1

[tool.cibuildwheel.macos]
before-test = "pip cache remove numpy; brew install openblas; OPENBLAS=\"$(brew --prefix openblas)\" pip install --no-cache-dir -U pip numpy"
